Fixed gap in side sections when adding lots of projects

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header {
 main {
 	display: grid;
 	grid-template-columns: 3fr 1fr;
-	grid-template-rows: 1fr 1fr;
+	grid-template-rows: auto auto 1fr;
 	gap: 24px 24px;
     padding: 16px;
 	background-color: #E2E8F0;
